--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "migration:revert": "npm run typeorm -- migration:revert -d ./typeOrm.config.ts"
   },
   "dependencies": {
+    "@cerebras/cerebras_cloud_sdk": "^1.59.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
